# robust-evaluation-design

./: .gitignore  README.md  config.py  experiment_baseline_horserace.py  experiment_comparative_statics.py  experiment_gaming_boundary.py  experiment_portfolio_size.py  model.py  pyproject.toml  sample_environments.py
case-study/: .gitignore  README.md  pyproject.toml
case-study/results/frontier/: frontier_test__ts_guessing.csv
case-study/results/identification/: identification.csv  identification.json
case-study/results/tests/: fine_threshold.csv  metric_quality.csv  portfolio.csv
case-study/scripts/: dispatch_detect.sh  dispatch_eval.sh  submit_phase_f.sh
case-study/scripts/slurm/: _common.sh  detect_70b.sbatch  detect_large.sbatch  detect_mid.sbatch  detect_small.sbatch  eval_70b.sbatch  eval_large.sbatch  eval_mid.sbatch  eval_small.sbatch  finetune_70b_qlora.sbatch  finetune_large14b.sbatch  finetune_large27b32b.sbatch  finetune_mid.sbatch  finetune_small.sbatch  smoketest_70b.sbatch
case-study/src/phase_f/: __init__.py  cli.py  config.py
case-study/src/phase_f/data/: __init__.py  contamination.py  instruction_corpus.py  mmlu.py  mmlu_cf.py  subsets.py  types.py
case-study/src/phase_f/detectors/: __init__.py  base.py  behavioral.py  embedding_sim.py  ngram_lcs.py  runner.py  ts_guessing.py
case-study/src/phase_f/eval/: __init__.py  aggregate.py  identify.py  loader.py  score.py
case-study/src/phase_f/finetune/: __init__.py  lora_config.py  train.py
case-study/src/phase_f/paraphrase/: __init__.py  generate.py
case-study/src/phase_f/tests/: __init__.py  fine_threshold.py  frontier.py  frontier_plot.py  metric_quality.py  portfolio.py
