[project]
name = "robust-evaluation-design-experiments"
version = "0.1.0"
description = "Replication code for the robust-evaluation-design paper (anonymous review)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
